--- a/style.css
+++ b/style.css
@@ -77,6 +77,11 @@ body {
 
 }
 
+.image-cover img {
+    border-radius: 2%;
+    object-fit: cover;
+}
+
 .image-page img {
     width: 100%;
     height: 100%;
